fix: don't show the scrollbar if not hovered

--- a/packages/dialect-react-ui/index.css
+++ b/packages/dialect-react-ui/index.css
@@ -486,8 +486,11 @@
   /* Foreground */
   background: transparent;
   /* hack to add visual margin to thumb https://stackoverflow.com/questions/29866759/how-do-i-add-a-margin-to-a-css-webkit-scrollbar */
-  box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0);
   border: solid 3px transparent;
+}
+.dt-light-scrollbar:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 10px 10px rgba(0, 0, 0, 0.3);
 }
 .dt-dark-scrollbar {
   /* Firefox: Foreground, Background */
@@ -498,8 +501,11 @@
   /* Foreground */
   background: transparent;
   /* hack to add visual margin to thumb https://stackoverflow.com/questions/29866759/how-do-i-add-a-margin-to-a-css-webkit-scrollbar */
-  box-shadow: inset 0 0 10px 10px rgba(255, 255, 255, 0.3);
   border: solid 3px transparent;
+  box-shadow: inset 0 0 10px 10px rgba(255, 255, 255, 0);
+}
+.dt-dark-scrollbar:hover::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 10px 10px rgba(255, 255, 255, 0.3);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
